Inconsistent behaviour in mod solidify simple vs. complex #89691

Closed
opened 2021-07-06 16:32:07 +02:00 by Miguel G. · 6 comments

Hi,

The Solidify modifier has two modes (simple and complex), with the main parameters (thickness and offset) being common to both. However, the results are qualitatively different when using the same thickness and offset in both modes.
Specifically, if the user enters a custom offset outside the [-1,1] range, the simple mode gives a reasonable result, but not the complex mode:

Simple mode:
image.png

Complex mode:
image.png

There is a simple fix, which appears to work.

Blender Version
Broken: all since the complex mode was introduced
Worked: none

Short description of error

Exact steps for others to reproduce the error

  • Delete one face from the default cube (makes it easier to visualize).
  • Add a solidify modifier to it.
  • Enter a value larger than 1 in the offset (click to edit).
  • The resulting surface should be outside the original, with the specified thickness.
  • Switch to Complex mode.
  • The resulting surface has a different thickness and placement (offset) relative to the original.

bug_solidify.blend

Hi, The Solidify modifier has two modes (simple and complex), with the main parameters (thickness and offset) being common to both. However, the results are qualitatively different when using the same thickness and offset in both modes. Specifically, if the user enters a custom offset outside the [-1,1] range, the simple mode gives a reasonable result, but not the complex mode: Simple mode: ![image.png](https://archive.blender.org/developer/F10213852/image.png) Complex mode: ![image.png](https://archive.blender.org/developer/F10213855/image.png) There is a simple fix, which appears to work. **Blender Version** Broken: all since the complex mode was introduced Worked: none **Short description of error** **Exact steps for others to reproduce the error** * Delete one face from the default cube (makes it easier to visualize). * Add a solidify modifier to it. * Enter a value larger than 1 in the offset (click to edit). * The resulting surface should be outside the original, with the specified thickness. * Switch to Complex mode. * The resulting surface has a different thickness and placement (offset) relative to the original. [bug_solidify.blend](https://archive.blender.org/developer/F10213868/bug_solidify.blend)
Author

Added subscriber: @Ghaspias

Added subscriber: @Ghaspias
Author

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Author

Mentioning @HDMaster84 as the author of latest commit to the related code.

Mentioning @HDMaster84 as the author of latest commit to the related code.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Miguel G. was assigned by Pratik Borhade 2021-07-07 08:24:44 +02:00

This issue was referenced by a53feb0aff

This issue was referenced by a53feb0aff5227fe0728275285ad35b6eba57508

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89691
No description provided.