Fix T89691: Solidify modifier simple/complex inconsistency

Maintain the sign when clamping non zero offset.

Reviewed By: campbellbarton, weasel

Ref D11832